# altcodepro-polydb-python

./: .gitignore  BUILD_GUIDE.md  LICENSE  MANIFEST.in  README.md  Readme_Integration_Tests.md  all_src_code_combined.py  combine_code.py  docker-compose.test.yml  example_usage.py  extract_architecture.py  pyproject.toml  pytest.ini  requirements-aws.txt  requirements-azure.txt  requirements-dev.txt  requirements-gcp.txt  requirements-generic.txt  requirements.txt  setup.py
architecture/: architecture_output.txt
src/polydb/: PolyDB.py  __init__.py  advanced_query.py  batch.py  cache.py  cloudDatabaseFactory.py  databaseFactory.py  decorators.py  errors.py  factory.py  json_safe.py  models.py  monitoring.py  multitenancy.py  query.py  registry.py  retry.py  schema.py  security.py  types.py  utils.py  validation.py
src/polydb/adapters/: AzureBlobStorageAdapter.py  AzureFileStorageAdapter.py  AzureQueueAdapter.py  AzureTableStorageAdapter.py  BlockchainBlobAdapter.py  BlockchainKVAdapter.py  BlockchainQueueAdapter.py  DynamoDBAdapter.py  EFSAdapter.py  FirestoreAdapter.py  GCPPubSubAdapter.py  GCPStorageAdapter.py  MongoDBAdapter.py  PostgreSQLAdapter.py  PubSubAdapter.py  S3Adapter.py  S3CompatibleAdapter.py  SQSAdapter.py  VercelBlobAdapter.py  VercelKVAdapter.py  VercelQueueAdapter.py
src/polydb/audit/: AuditStorage.py  __init__.py  audit.sql  context.py  manager.py  models.py
src/polydb/base/: DataAccessRuntime.py  NoSQLKVAdapter.py  ObjectStorageAdapter.py  QueueAdapter.py  SharedFilesAdapter.py
tests/: conftest.py  integration.py  test_aws.py  test_azure.py  test_blockchain.py  test_cloud_factory.py  test_gcp.py  test_mongodb.py  test_multi_engine.py  test_postgresql.py  test_vercel.py
