[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altcodepro-polydb-python"
version = "2.1.0"
description = "Production-ready multi-cloud database abstraction layer with connection pooling, retry logic, and thread safety"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license-files = ["LICENSE"]
authors = [{name = "AltCodePro"}]
keywords = [
    "database",
    "cloud",
    "multi-cloud",
    "aws",
    "azure",
    "gcp",
    "abstraction",
    "nosql",
    "sql",
    "postgres",
    "mongodb",
    "dynamodb",
    "s3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

# Core dependencies - always installed
dependencies = [
    "psycopg2-binary>=2.9.11",
    "tenacity>=9.1.4"
]

# Generic/Open-source stack (cheapest option)
[project.optional-dependencies]

aws = [
    "boto3>=1.42.47",
    "botocore>=1.42.47"
]

azure = [
    "azure-core>=1.38.1",
    "azure-data-tables>=12.7.0",
    "azure-storage-blob>=12.28.0",
    "azure-storage-file-share>=12.24.0",
    "azure-storage-queue>=12.15.0"
]

gcp = [
    "google-api-core>=2.29.0",
    "google-auth>=2.48.0",
    "google-cloud-core>=2.5.0",
    "google-cloud-firestore>=2.23.0",
    "google-cloud-pubsub>=2.35.0",
    "google-cloud-storage>=3.9.0"
]

mongodb = [
    "pymongo>=4.16.0"
]

rabbitmq = [
    "pika>=1.3.2"
]

vercel = [
    "requests>=2.32.5"
]

generic = [
    "pymongo>=4.16.0",
    "pika>=1.3.2",
    "boto3>=1.42.47"
]

all = [
    "boto3>=1.42.47",
    "botocore>=1.42.47",
    "azure-core>=1.38.1",
    "azure-data-tables>=12.7.0",
    "azure-storage-blob>=12.28.0",
    "azure-storage-file-share>=12.24.0",
    "azure-storage-queue>=12.15.0",
    "google-cloud-firestore>=2.23.0",
    "google-cloud-pubsub>=2.35.0",
    "google-cloud-storage>=3.9.0",
    "pymongo>=4.16.0",
    "pika>=1.3.2",
    "requests>=2.32.5",
    "redis>=6.4.0"
]


# Development dependencies
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.1"
]


# Testing with all providers
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "moto>=5.1.21"
]

[project.urls]
Homepage = "https://github.com/altcodepro/polydb-python"
Documentation = "https://github.com/altcodepro/polydb-python#readme"
Repository = "https://github.com/altcodepro/polydb-python"
"Bug Tracker" = "https://github.com/altcodepro/polydb-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["polydb*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
polydb = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=polydb",
    "--cov-report=term-missing",
    "--cov-report=html",
]